[package]
name = "blank_for_sometime"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui"]
tui = ["dep:crossterm"]

[dependencies]
rand = "0.8"
eframe = { version = "0.27", optional = true }
egui = { version = "0.27", optional = true }
crossterm = { version = "0.29", optional = true }
